@@ -1,22 +1,24 @@
 package crystalspider.soulfired.api;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
-import org.slf4j.Logger;
-
-import com.mojang.logging.LogUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import crystalspider.soulfired.api.type.FireTypeChanger;
-import net.minecraft.sounds.SoundEvent;
-import net.minecraft.world.damagesource.DamageSource;
-import net.minecraft.world.entity.Entity;
-import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.item.enchantment.Enchantment;
-import net.minecraft.world.level.block.CampfireBlock;
-import net.minecraft.world.level.block.state.BlockBehaviour.Properties;
-import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.block.AbstractBlock.Properties;
+import net.minecraft.block.BlockState;
+import net.minecraft.block.CampfireBlock;
+import net.minecraft.enchantment.Enchantment;
+import net.minecraft.entity.Entity;
+import net.minecraft.entity.LivingEntity;
+import net.minecraft.util.DamageSource;
+import net.minecraft.util.SoundEvent;
 
 /**
  * Static manager for the registered Fires.
@@ -25,7 +27,7 @@ public abstract class FireManager {
   /**
    * Logger.
    */
-  private static final Logger LOGGER = LogUtils.getLogger();
+  private static final Logger LOGGER = LogManager.getLogger();
 
   /**
    * Fire Id of Vanilla Fire.
@@ -91,7 +93,7 @@ public abstract class FireManager {
    * @return a copy of the list of all registered {@link Fire Fires}.
    */
   public static final List<Fire> getFires() {
-    return List.copyOf(fires.values());
+    return new ArrayList<>(fires.values());
   }
 
   /**
@@ -116,7 +118,7 @@ public abstract class FireManager {
    * @return whether the given {@code id} is a valid fire id.
    */
   public static final boolean isValidFireId(String id) {
-    return !(id == null || id.isBlank());
+    return StringUtils.isNotBlank(id);
   }
 
   /**
@@ -161,7 +163,7 @@ public abstract class FireManager {
    * @return a copy of the list of all registered fire ids.
    */
   public static final List<String> getFireIds() {
-    return List.copyOf(Collections.list(fires.keys()));
+    return new ArrayList<>(Collections.list(fires.keys()));
   }
 
   /**
@@ -270,7 +272,7 @@ public abstract class FireManager {
    * @return the list of all Fire Aspect enchantments registered.
    */
   public static final List<Enchantment> getFireAspects() {
-    return fires.values().stream().map(fire -> fire.getFireAspect()).toList();
+    return fires.values().stream().map(fire -> fire.getFireAspect()).collect(Collectors.toList());
   }
 
   /**
@@ -279,7 +281,7 @@ public abstract class FireManager {
    * @return the list of all Flame enchantments registered.
    */
   public static final List<Enchantment> getFlames() {
-    return fires.values().stream().map(fire -> fire.getFlame()).toList();
+    return fires.values().stream().map(fire -> fire.getFlame()).collect(Collectors.toList());
   }
 
   /**
